[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/UI/ui_panel_2.png" type="Texture" id=1]
[ext_resource path="res://scripts/order-fulfillment/FulfillOrderPopup.gd" type="Script" id=3]

[node name="FulfillOrderPopup" type="Popup"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 425, 0 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 291.0
margin_top = 166.0
margin_right = -291.0
margin_bottom = -166.0
grow_vertical = 2
texture = ExtResource( 1 )
patch_margin_left = 25
patch_margin_top = 25
patch_margin_right = 25
patch_margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupLayout" type="VBoxContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 3.0
margin_right = -5.0
margin_bottom = -3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="NinePatchRect/PopupLayout"]
margin_right = 432.0
margin_bottom = 14.0
text = "FULFILL ORDER?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="NinePatchRect/PopupLayout"]
margin_top = 18.0
margin_right = 432.0
margin_bottom = 22.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YouShipLabel" type="Label" parent="NinePatchRect/PopupLayout"]
margin_top = 26.0
margin_right = 432.0
margin_bottom = 40.0
text = "You'll ship:"

[node name="ShippedItems" type="VBoxContainer" parent="NinePatchRect/PopupLayout"]
margin_top = 44.0
margin_right = 432.0
margin_bottom = 44.0

[node name="HSeparator2" type="HSeparator" parent="NinePatchRect/PopupLayout"]
margin_top = 48.0
margin_right = 432.0
margin_bottom = 52.0

[node name="PayHeader" type="Label" parent="NinePatchRect/PopupLayout"]
margin_top = 56.0
margin_right = 432.0
margin_bottom = 70.0
text = "Order pay:"

[node name="PaymentLabel" type="Label" parent="NinePatchRect/PopupLayout"]
margin_top = 74.0
margin_right = 432.0
margin_bottom = 88.0
text = "$150500"
align = 1

[node name="HSeparator3" type="HSeparator" parent="NinePatchRect/PopupLayout"]
margin_top = 92.0
margin_right = 432.0
margin_bottom = 96.0

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/PopupLayout"]
margin_top = 100.0
margin_right = 432.0
margin_bottom = 120.0

[node name="ConfirmButton" type="Button" parent="NinePatchRect/PopupLayout/HBoxContainer"]
margin_right = 214.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="NinePatchRect/PopupLayout/HBoxContainer/ConfirmButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "CONFIRM"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelButton" type="Button" parent="NinePatchRect/PopupLayout/HBoxContainer"]
margin_left = 218.0
margin_right = 432.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="NinePatchRect/PopupLayout/HBoxContainer/CancelButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "CANCEL"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="NinePatchRect/PopupLayout/HBoxContainer/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="pressed" from="NinePatchRect/PopupLayout/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
